--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">pokedexapp</string>
+    <string name="label_pokemon_image">Pokemon Imagem</string>
 </resources>
